--- a/compose.yml
+++ b/compose.yml
@@ -1,12 +1,10 @@
-
 services:
   atlwiki:
     build:
       context: .
-      dockerfile: Dockerfile-Alpine
+      dockerfile: Dockerfile
     container_name: atlwiki
     volumes:
       - ./.env:/var/www/atlwiki/.env
     ports:
       - "3001:80"
-
