--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,15 @@
-# Core settings
+# Core Settings
 UPGRADE_KEY=""
 SECRET_KEY=""
+
+# DB Settings
+DB_PASSWORD=""
+DB_SERVER=""
+DB_NAME=""
+DB_USER=""
 DB_PASSWORD=""
 
-# Extensions
+# Extension Settings
 TURNSTILE_SITE_KEY=""
 SMTP_PASSWORD=""
 TURNSTILE_SECRET_KEY=""
