--- a/php.ini
+++ b/php.ini
@@ -1,4 +1,7 @@
-upload_max_filesize = 25M
+log_errors=On
+error_log=/tmp/php-error.log
+display_errors=On
+error_reporting=E_ALL
 allow_url_fopen = Off
 opcache.memory_consumption = 128
 opcache.interned_strings_buffer = 8
@@ -6,8 +9,4 @@ opcache.max_accelerated_files = 4000
 opcache.revalidate_freq = 60
 memory_limit = 512M
 max_execution_time = 60
-error_reporting = E_ALL
-log_errors = On
-error_log = /dev/stdout
-display_errors = Off
 post_max_size = 25M
