--- a/compose.yml
+++ b/compose.yml
@@ -5,6 +5,6 @@ services:
       dockerfile: Dockerfile
     container_name: atlwiki
     volumes:
-      - ./.env:/var/www/atlwiki/.env
+      - .env:/var/www/atlwiki/.env
     ports:
       - "3001:80"
