--- a/mediawiki.conf
+++ b/mediawiki.conf
@@ -10,7 +10,7 @@ server {
         location ~ \.php$ {
             try_files $uri =404;
             include fastcgi_params;
-            fastcgi_pass unix:/run/php/php8.3-fpm.sock;
+            fastcgi_pass 127.0.0.1:9000;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             fastcgi_index index.php;
         }
