Update names of env vars

--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ TURNSTILE_SITE_KEY=""
 SMTP_PASSWORD=""
 TURNSTILE_SECRET_KEY=""
 DISCORD_WEBHOOK_URL=""
-CLIENT_ID=""
-CLIENT_SECRET=""
+OPENID_CLIENT_ID=""
+OPENID_CLIENT_SECRET=""
 ACCESS_KEY_ID=""
 SECRET_ACCESS_KEY=""
