Move some generic configuraitons to the env file

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,14 @@
-# Core Settings
+# Core Secrets
 UPGRADE_KEY=""
 SECRET_KEY=""
 
-# DB Settings
+# DB Secrets
 DB_SERVER=""
 DB_NAME=""
 DB_USER=""
 DB_PASSWORD=""
 
-# Extension Settings
+# Extension Secrets
 TURNSTILE_SITE_KEY=""
 SMTP_PASSWORD=""
 TURNSTILE_SECRET_KEY=""
@@ -17,3 +17,9 @@ OPENID_CLIENT_ID=""
 OPENID_CLIENT_SECRET=""
 ACCESS_KEY_ID=""
 SECRET_ACCESS_KEY=""
+
+# Wiki Configurations
+SITENAME=""
+WG_SERVER=""
+AWS_BUCKET_NAME=""
+AWS_BUCKET_DOMAIN=""
