--- a/php.ini
+++ b/php.ini
@@ -1,3 +1,4 @@
+; General Configurations
 log_errors=On
 error_log=/tmp/php-error.log
 display_errors=On
@@ -10,3 +11,10 @@ opcache.revalidate_freq = 60
 memory_limit = 512M
 max_execution_time = 60
 post_max_size = 25M
+
+; Redis Configurations
+extension=redis.so
+session.save_handler = redis
+session.save_path = "tcp://staging-atlwiki-redis:6379"
+redis.timeout = 2.5
+redis.read_timeout = 2.5
