--- a/php.ini
+++ b/php.ini
@@ -15,6 +15,6 @@ post_max_size = 25M
 ; Redis Configurations
 extension=redis.so
 session.save_handler = redis
-session.save_path = "tcp://staging-atlwiki-redis:6379"
+session.save_path = "tcp://redis:6379"
 redis.timeout = 2.5
 redis.read_timeout = 2.5
