Make redis use authentication

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,9 @@ DB_NAME=""
 DB_USER=""
 DB_PASSWORD=""
 
+# Redis Secrets
+REDIS_PASSWORD=""
+
 # Extension Secrets
 TURNSTILE_SITE_KEY=""
 SMTP_PASSWORD=""
