--- a/compose.yml.example
+++ b/compose.yml.example
@@ -14,5 +14,8 @@ services:
   redis:
     image: redis:7-alpine
     container_name: atlwiki-redis
+    command: redis-server --requirepass ${REDIS_PASSWORD}
+    environment:
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
     ports:
       - "6379:6379"
