Optimise Docker Image

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
+# Build Arguments
+MEDIAWIKI_MAJOR_VERSION=""
+MEDIAWIKI_VERSION=""
+MEDIAWIKI_BRANCH=""
+CITIZEN_VERSION=""
+
 # Core Secrets
 UPGRADE_KEY=""
 SECRET_KEY=""
