--- a/mediawiki.conf
+++ b/mediawiki.conf
@@ -7,13 +7,14 @@ server {
     location / {
         rewrite ^/$ /mediawiki/index.php last;
         try_files $uri $uri/ /mediawiki/index.php?$args;
-        location ~ \.php$ {
-            try_files $uri =404;
-            include fastcgi_params;
-            fastcgi_pass 127.0.0.1:9000;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            fastcgi_index index.php;
-        }
+    }
+
+    location ~ \.php$ {
+        try_files $uri =404;
+        include fastcgi_params;
+        fastcgi_pass mediawiki:9000;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_index index.php;
     }
 
     location = /index.php {
