--- a/compose.yml.example
+++ b/compose.yml.example
@@ -15,6 +15,12 @@ services:
       - .env:/var/www/atlwiki/.env:ro
     expose:
       - "9000"
+    healthcheck:
+      test: ["CMD", "php-fpm", "-t"]
+      interval: 30s
+      timeout: 10s
+      start_period: 60s
+      retries: 3
     depends_on:
       redis:
         condition: service_started
@@ -26,12 +32,18 @@ services:
     container_name: atlwiki-nginx
     depends_on:
       mediawiki:
-        condition: service_started
+        condition: service_healthy
     ports:
       - "3000:80"
     volumes:
       - wiki-webroot:/var/www/atlwiki:ro
       - ./mediawiki.conf:/etc/nginx/conf.d/mediawiki.conf:ro
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost/"]
+      interval: 30s
+      timeout: 10s
+      start_period: 30s
+      retries: 3
     networks:
       - wiki-network
 
@@ -40,6 +52,12 @@ services:
     container_name: atlwiki-redis
     ports:
       - "6379:6379"
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 30s
+      timeout: 10s
+      start_period: 30s
+      retries: 3
     networks:
       - wiki-network
 
