--- a/mediawiki.conf
+++ b/mediawiki.conf
@@ -15,6 +15,10 @@ server {
         fastcgi_pass mediawiki:9000;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_index index.php;
+        fastcgi_read_timeout 300;
+        fastcgi_buffer_size 128k;
+        fastcgi_buffers 4 256k;
+        fastcgi_busy_buffers_size 256k;
     }
 
     location = /index.php {
@@ -34,7 +38,11 @@ server {
     }
 
     location /images/ {
-    deny all;
+        deny all;
+    }
+
+    location /cache/ {
+        deny all;
     }
 
     location ~ /\.env {
