--- a/staging-compose.yml.example
+++ b/staging-compose.yml.example
@@ -1,4 +1,4 @@
-name: atlwiki
+name: staging-atlwiki
 
 services:
   mediawiki:
@@ -10,7 +10,7 @@ services:
         MEDIAWIKI_VERSION: ${MEDIAWIKI_VERSION}
         MEDIAWIKI_BRANCH: ${MEDIAWIKI_BRANCH}
         CITIZEN_VERSION: ${CITIZEN_VERSION}
-    container_name: atlwiki
+    container_name: staging-atlwiki-mediawiki
     depends_on:
       redis:
         condition: service_started
@@ -32,7 +32,7 @@ services:
 
   nginx:
     image: nginx:stable-alpine
-    container_name: atlwiki-nginx
+    container_name: staging-atlwiki-nginx
     depends_on:
       mediawiki:
         condition: service_healthy
@@ -40,7 +40,7 @@ services:
       - wiki-webroot:/var/www/atlwiki:ro
       - ./mediawiki.conf:/etc/nginx/conf.d/mediawiki.conf:ro
     ports:
-      - '3000:80'
+      - '3001:80'
     networks:
       - wiki-network
     restart: unless-stopped
@@ -53,7 +53,7 @@ services:
 
   redis:
     image: redis:alpine
-    container_name: atlwiki-redis
+    container_name: staging-atlwiki-redis
     volumes:
       - redis-data:/data
     networks:
