Fix a thumnail generation issue

--- a/php.ini
+++ b/php.ini
@@ -3,7 +3,7 @@ log_errors=On
 error_log=/tmp/php-error.log
 display_errors=On
 error_reporting=E_ALL
-allow_url_fopen = Off
+allow_url_fopen = On
 opcache.memory_consumption = 128
 opcache.interned_strings_buffer = 8
 opcache.max_accelerated_files = 4000
