--- a/php.ini
+++ b/php.ini
@@ -1,7 +1,7 @@
 ; General Configurations
 log_errors=On
 error_log=/tmp/php-error.log
-display_errors=On
+display_errors=Off
 error_reporting=E_ALL
 allow_url_fopen = On
 opcache.memory_consumption = 128
