Add skins and extensions location rules

--- a/mediawiki.conf
+++ b/mediawiki.conf
@@ -37,6 +37,14 @@ server {
         try_files $uri $uri/ /mediawiki/rest.php?$args;
     }
 
+    location ~ ^/Extensions/(.*)$ {
+        rewrite ^/Extensions/(.*)$ /mediawiki/extensions/$1 last;
+    }
+
+    location ~ ^/skins/(.*)$ {
+        rewrite ^/skins/(.*)$ /mediawiki/skins/$1 last;
+    }
+
     location /images/ {
         deny all;
     }
