--- a/php.ini
+++ b/php.ini
@@ -11,6 +11,8 @@ opcache.revalidate_freq = 60
 memory_limit = 512M
 max_execution_time = 60
 post_max_size = 25M
+upload_max_filesize = 25M
+max_input_vars = 3000
 
 ; Redis Configurations
 session.save_handler = redis
