fix(php): change to use valkey instead of redis

--- a/wiki/php.ini
+++ b/wiki/php.ini
@@ -14,8 +14,8 @@ post_max_size = 25M
 upload_max_filesize = 25M
 max_input_vars = 3000
 
-; Redis Configurations
+; Valkey Configurations
 session.save_handler = redis
-session.save_path = "tcp://redis:6379"
+session.save_path = "tcp://valkey:6379"
 redis.timeout = 2.5
 redis.read_timeout = 2.5
