--- a/.dockerignore
+++ b/.dockerignore
@@ -1,13 +1,18 @@
-.env
-.env.example
 LICENSE
 README.md
-compose.yml
-production-compose.yml.example
-staging-compose.yml.example
-compose.yml.example
+compose.yaml
+production-compose.yaml.example
+staging-compose.yaml.example
 composer.lock
+renovate.json
+Dockerfile
+Justfile
+.env
+.env.example
+.dockerignore
 .gitignore
 .git/
+.vscode/
+.github/
 vendor/
 systemd/
