fix(docker): Update env names

--- a/local-compose.yaml.example
+++ b/local-compose.yaml.example
@@ -75,7 +75,7 @@ services:
     image: mariadb:latest
     container_name: local-atlwiki-mariadb
     environment:
-      MARIADB_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
+      MARIADB_ROOT_PASSWORD: ${DB_PASSWORD}
       MARIADB_DATABASE: ${DB_NAME}
       MARIADB_USER: ${DB_USER}
       MARIADB_PASSWORD: ${DB_PASSWORD}
@@ -97,8 +97,8 @@ services:
     image: minio/minio:latest
     container_name: local-atlwiki-minio
     environment:
-      MINIO_ROOT_USER: ${MINIO_ROOT_USER}
-      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
+      MINIO_ROOT_USER: ${MINIO_USER}
+      MINIO_ROOT_PASSWORD: ${MINIO_PASSWORD}
     volumes:
       - ./images:/data
     networks:
