feat(env): Add deafult values for local env

--- a/.env.local.example
+++ b/.env.local.example
@@ -9,31 +9,30 @@ UPGRADE_KEY=""
 SECRET_KEY=""
 
 # DB Secrets
-DB_SERVER=""
-DB_NAME=""
-DB_USER=""
-DB_PASSWORD=""
+DB_SERVER="mariadb"
+DB_NAME="local-maria-db"
+DB_USER="local-maria-user"
+DB_PASSWORD="local-maria-password"
 
 # Extension Secrets
 TURNSTILE_SITE_KEY=""
 SMTP_PASSWORD=""
 TURNSTILE_SECRET_KEY=""
 DISCORD_WEBHOOK_URL=""
-OPENID_CLIENT_ID=""
-OPENID_CLIENT_SECRET=""
-ACCESS_KEY_ID=""
-SECRET_ACCESS_KEY=""
+#OPENID_CLIENT_ID="" DISABLED FOR LOCAL
+#OPENID_CLIENT_SECRET="" DISABLED FOR LOCAL
+ACCESS_KEY_ID="local-minio-user"
+SECRET_ACCESS_KEY="local-minio-password"
 
 # Wiki Configurations
-SITENAME=""
-WG_SERVER=""
-AWS_BUCKET_NAME=""
-AWS_BUCKET_DOMAIN=""
+SITENAME="local.atl.wiki"
+WG_SERVER="http://minio:3000"
+AWS_BUCKET_NAME="local-atlwiki"
+AWS_BUCKET_DOMAIN="minio:9000"
 
 # Local Configurations
-DB_ROOT_PASSWORD=""
-DB_NAME=""
-DB_USER=""
-DB_PASSWORD=""
-MINIO_ROOT_USER=""
-MINIO_ROOT_PASSWORD=""
+DB_PASSWORD="local-maria-password"
+DB_NAME="local-maria-db"
+DB_USER="local-maria-user"
+MINIO_USER="local-minio-user"
+MINIO_PASSWORD="local-minio-password"
