fix(env): Disable mail option for local setup

--- a/.env.local.example
+++ b/.env.local.example
@@ -15,8 +15,8 @@ DB_USER="local-maria-user"
 DB_PASSWORD="local-maria-password"
 
 # Extension Secrets
+#SMTP_PASSWORD="" DISABLED FOR LOCAL
 TURNSTILE_SITE_KEY=""
-SMTP_PASSWORD=""
 TURNSTILE_SECRET_KEY=""
 DISCORD_WEBHOOK_URL=""
 #OPENID_CLIENT_ID="" DISABLED FOR LOCAL
