fix(env): Rename to be more clear about what it is

--- a/.env.local.example
+++ b/.env.local.example
@@ -21,8 +21,8 @@ TURNSTILE_SECRET_KEY=""
 DISCORD_WEBHOOK_URL=""
 #OPENID_CLIENT_ID="" DISABLED FOR LOCAL
 #OPENID_CLIENT_SECRET="" DISABLED FOR LOCAL
-ACCESS_KEY_ID="local-minio-user"
-SECRET_ACCESS_KEY="local-minio-password"
+S3_ACCESS_KEY_ID="local-minio-user"
+S3_SECRET_ACCESS_KEY="local-minio-password"
 
 # Wiki Configurations
 SITENAME="local.atl.wiki"
