--- a/.env.example
+++ b/.env.example
@@ -21,8 +21,8 @@ TURNSTILE_SECRET_KEY=""
 DISCORD_WEBHOOK_URL=""
 OPENID_CLIENT_ID=""
 OPENID_CLIENT_SECRET=""
-ACCESS_KEY_ID=""
-SECRET_ACCESS_KEY=""
+S3_ACCESS_KEY_ID=""
+S3_SECRET_ACCESS_KEY=""
 
 # Wiki Configurations
 SITENAME=""
