fix(env/docker): give vars more suitable names

--- a/local-compose.yaml.example
+++ b/local-compose.yaml.example
@@ -75,10 +75,10 @@ services:
     image: mariadb:latest
     container_name: local-atlwiki-mariadb
     environment:
-      MARIADB_ROOT_PASSWORD: ${DB_PASSWORD}
-      MARIADB_DATABASE: ${DB_NAME}
-      MARIADB_USER: ${DB_USER}
-      MARIADB_PASSWORD: ${DB_PASSWORD}
+      MARIADB_ROOT_PASSWORD: ${MARIADB_PASSWORD}
+      MARIADB_DATABASE: ${MARIADB_NAME}
+      MARIADB_USER: ${MARIADB_USER}
+      MARIADB_PASSWORD: ${MARIADB_PASSWORD}
     volumes:
       - ./database:/var/lib/mysql
     networks:
