--- a/.env.local.example
+++ b/.env.local.example
@@ -10,9 +10,9 @@ SECRET_KEY=""
 
 # DB Secrets
 DB_SERVER="mariadb"
-DB_NAME="local-maria-db"
-DB_USER="local-maria-user"
-DB_PASSWORD="local-maria-password"
+DB_NAME="local-maria-db" # This needs to match MARIADB_NAME
+DB_USER="local-maria-user" # This needs to match MARIADB_USER
+DB_PASSWORD="local-maria-password" # This needs to match MARIADB_PASSWORD
 
 # Extension Secrets
 #SMTP_PASSWORD="" DISABLED FOR LOCAL
@@ -21,8 +21,8 @@ TURNSTILE_SECRET_KEY=""
 DISCORD_WEBHOOK_URL=""
 #OPENID_CLIENT_ID="" DISABLED FOR LOCAL
 #OPENID_CLIENT_SECRET="" DISABLED FOR LOCAL
-S3_ACCESS_KEY_ID="local-minio-user"
-S3_SECRET_ACCESS_KEY="local-minio-password"
+S3_ACCESS_KEY_ID="local-minio-user" # This needs to match MINIO_USER
+S3_SECRET_ACCESS_KEY="local-minio-password" # This needs to match MINIO_PASSWORD
 
 # Wiki Configurations
 SITENAME="local.atl.wiki"
@@ -31,8 +31,8 @@ AWS_BUCKET_NAME="local-atlwiki"
 AWS_BUCKET_DOMAIN="minio:9000"
 
 # Local Configurations
-DB_PASSWORD="local-maria-password"
-DB_NAME="local-maria-db"
-DB_USER="local-maria-user"
-MINIO_USER="local-minio-user"
-MINIO_PASSWORD="local-minio-password"
+MARIADB_PASSWORD="local-maria-password" # This needs to match DB_PASSWORD
+MARIADB_NAME="local-maria-db" # This needs to match DB_NAME
+MARIADB_USER="local-maria-user" # This needs to match DB_USER
+MINIO_USER="local-minio-user" # This needs to match S3_ACCESS_KEY_ID
+MINIO_PASSWORD="local-minio-password" # This needs to match S3_SECRET_ACCESS_KEY
