--- a/.env.local.example
+++ b/.env.local.example
@@ -23,6 +23,7 @@ DISCORD_WEBHOOK_URL=""
 #OPENID_CLIENT_SECRET="" DISABLED FOR LOCAL
 S3_ACCESS_KEY_ID="local-minio-user" # This needs to match MINIO_USER
 S3_SECRET_ACCESS_KEY="local-minio-password" # This needs to match MINIO_PASSWORD
+S3_ENDPOINT="http://minio:9000" # This needs to match MINIO_ENDPOINT
 
 # Wiki Configurations
 SITENAME="local.atl.wiki"
