--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,7 @@ OPENID_CLIENT_ID=""
 OPENID_CLIENT_SECRET=""
 S3_ACCESS_KEY_ID=""
 S3_SECRET_ACCESS_KEY=""
+S3_ENDPOINT=""
 
 # Wiki Configurations
 SITENAME=""
