fix(vscode): Add extra detection for env files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.associations": {
-        "*compose.yaml*": "yaml"
+        "*compose.yaml*": "yaml",
+        ".env.*": "env"
     }
 }
