fix(env): add new env vars

--- a/.env.local.example
+++ b/.env.local.example
@@ -30,6 +30,13 @@ SITENAME="local.atl.wiki"
 WG_SERVER="http://minio:3000"
 AWS_BUCKET_NAME="local-atlwiki"
 AWS_BUCKET_DOMAIN="minio:9000"
+SMTP_HOST=""
+SMTP_DOMAIN=""
+SMTP_USERNAME=""
+SMTP_PORT=""
+EMERGENCY_EMAIL=""
+PASSWORD_EMAIL=""
+
 
 # Local Configurations
 MARIADB_PASSWORD="local-maria-password" # This needs to match DB_PASSWORD
