--- a/.env.local.example
+++ b/.env.local.example
@@ -1,41 +1,91 @@
 # Build Arguments
+
+# This major version number of MediaWiki you want to use, e.g. "1.45"
 MEDIAWIKI_MAJOR_VERSION=""
+# The full version number of MediaWiki you want to use, e.g. "1.45.2"
 MEDIAWIKI_VERSION=""
+# The branch of MediaWiki you want to use for extensions, e.g. "REL1_45"
 MEDIAWIKI_BRANCH=""
+# The version of the Citizen skin you want to use, e.g. "v0.7.0"
 CITIZEN_VERSION=""
 
+
 # Core Secrets
+
+# The key to access the upgrade page, this is disabled on the default image
+# This needs to be a 16 character alphanumeric string
 UPGRADE_KEY=""
+# The key is used for various security related functions within MediaWiki
+# This needs to be a 64 character alphanumeric string
 SECRET_KEY=""
 
-# DB Secrets
+
+# DB Configurations
+
+# The IP address or hostname of your database server
 DB_SERVER="mariadb"
-DB_NAME="local-maria-db" # This needs to match MARIADB_NAME
-DB_USER="local-maria-user" # This needs to match MARIADB_USER
-DB_PASSWORD="local-maria-password" # This needs to match MARIADB_PASSWORD
+# The name of the table in the database used by MediaWiki
+DB_NAME="local-maria-db"
+# The username used by MediaWiki to connect to the database
+DB_USER="local-maria-user"
+# The password used by MediaWiki to connect to the database
+DB_PASSWORD="local-maria-password"
 
-# Extension Secrets
-#SMTP_PASSWORD="" DISABLED FOR LOCAL
-TURNSTILE_SITE_KEY=""
-TURNSTILE_SECRET_KEY=""
-DISCORD_WEBHOOK_URL=""
-#OPENID_CLIENT_ID="" DISABLED FOR LOCAL
-#OPENID_CLIENT_SECRET="" DISABLED FOR LOCAL
-S3_ACCESS_KEY_ID="local-minio-user" # This needs to match MINIO_USER
-S3_SECRET_ACCESS_KEY="local-minio-password" # This needs to match MINIO_PASSWORD
-S3_ENDPOINT="http://minio:9000" # This needs to match MINIO_ENDPOINT
 
-# Wiki Configurations
-SITENAME="local.atl.wiki"
-WG_SERVER="http://minio:3000"
-AWS_BUCKET_NAME="local-atlwiki"
-AWS_BUCKET_DOMAIN="minio:9000"
+# SMTP Configurations and Secrets
+
+# The SMTP server host address
 SMTP_HOST=""
+# The SMTP domain you wish to use for sending emails
 SMTP_DOMAIN=""
-SMTP_USERNAME=""
+# The SMTP server port, usually 587 for TLS or 465 for SSL
 SMTP_PORT=""
+# The email address to send SMTP emails from for service notifications
+SMTP_USERNAME=""
+# The password for the SMTP username
+SMTP_PASSWORD=""
+# The email address to send emergency notifications to
 EMERGENCY_EMAIL=""
-PASSWORD_EMAIL=""
+
+
+# Cloudflare Turnstile Secrets
+
+# The site key for Cloudflare Turnstile
+TURNSTILE_SITE_KEY=""
+# The secret key for Cloudflare Turnstile
+TURNSTILE_SECRET_KEY=""
+
+
+# OpenID Okta Secrets
+
+# The client ID for OpenID authentication from Okta
+# OPENID_CLIENT_ID="" DISABLED FOR LOCAL
+# The client secret for OpenID authentication from Okta
+# OPENID_CLIENT_SECRET="" DISABLED FOR LOCAL
+
+
+# S3 Configurations and Secrets
+
+# The S3 endpoint URL
+S3_ENDPOINT="http://minio:9000"
+# The S3 access key ID
+S3_ACCESS_KEY_ID="local-minio-user" # This needs to match MINIO_USER
+# The S3 secret access key
+S3_SECRET_ACCESS_KEY="local-minio-password" # This needs to match MINIO_PASSWORD
+# The S3 bucket name
+AWS_BUCKET_NAME=""
+# The S3 bucket domain
+AWS_BUCKET_DOMAIN="minio:9000"
+
+
+# Miscellaneous Configurations
+
+# The domain the wiki will be accessible from, without the protocol (e.g. example.com)
+SITENAME="local.atl.wiki"
+# The full URL the wiki will be accessible from, including the protocol (e.g. https://example.com)
+WG_SERVER="http://localhost:3000"
+# Discord Webhook URL
+DISCORD_WEBHOOK_URL=""
 
 
 # Local Configurations
