--- a/.env.example
+++ b/.env.example
@@ -73,9 +73,9 @@ S3_ACCESS_KEY_ID=""
 # The S3 secret access key
 S3_SECRET_ACCESS_KEY=""
 # The S3 bucket name
-AWS_BUCKET_NAME=""
+S3_BUCKET_NAME=""
 # The S3 bucket domain
-AWS_BUCKET_DOMAIN=""
+S3_BUCKET_DOMAIN=""
 
 
 # Miscellaneous Configurations
