--- a/.env.local.example
+++ b/.env.local.example
@@ -73,9 +73,9 @@ S3_ACCESS_KEY_ID="local-minio-user" # This needs to match MINIO_USER
 # The S3 secret access key
 S3_SECRET_ACCESS_KEY="local-minio-password" # This needs to match MINIO_PASSWORD
 # The S3 bucket name
-AWS_BUCKET_NAME=""
+S3_BUCKET_NAME=""
 # The S3 bucket domain
-AWS_BUCKET_DOMAIN="minio:9000"
+S3_BUCKET_DOMAIN="minio:9000"
 
 
 # Miscellaneous Configurations
