--- a/.env.local.example
+++ b/.env.local.example
@@ -1,12 +1,12 @@
 # Build Arguments
 
-# This major version number of MediaWiki you want to use, e.g. "1.45"
+# This major version number of MediaWiki you want to use, e.g. "1.44"
 MEDIAWIKI_MAJOR_VERSION=""
-# The full version number of MediaWiki you want to use, e.g. "1.45.2"
+# The full version number of MediaWiki you want to use, e.g. "1.44.2"
 MEDIAWIKI_VERSION=""
-# The branch of MediaWiki you want to use for extensions, e.g. "REL1_45"
+# The branch of MediaWiki you want to use for extensions, e.g. "REL1_44"
 MEDIAWIKI_BRANCH=""
-# The version of the Citizen skin you want to use, e.g. "v0.7.0"
+# The version of the Citizen skin you want to use, e.g. "3.7.0"
 CITIZEN_VERSION=""
 
 
