fix(env): update sitename to include port

--- a/.env.local.example
+++ b/.env.local.example
@@ -81,7 +81,7 @@ S3_BUCKET_DOMAIN="minio:9000"
 # Miscellaneous Configurations
 
 # The domain the wiki will be accessible from, without the protocol (e.g. example.com)
-SITENAME="local.atl.wiki"
+SITENAME="localhost:3000"
 # The full URL the wiki will be accessible from, including the protocol (e.g. https://example.com)
 WG_SERVER="http://localhost:3000"
 # Discord Webhook URL
