--- a/local-compose.yaml.example
+++ b/local-compose.yaml.example
@@ -40,6 +40,7 @@ services:
         condition: service_healthy
     environment:
       NGINX_SERVER_NAME: ${SITENAME}
+      NGINX_ENVSUBST_OUTPUT_DIR: /etc/nginx/conf.d
     volumes:
       - wiki-webroot:/var/www/atlwiki:ro
       - ./mediawiki.conf:/etc/nginx/templates/mediawiki.conf.template:ro
@@ -48,9 +49,6 @@ services:
     networks:
       - wiki-network
     restart: unless-stopped
-    command: >
-      sh -c "rm -f /etc/nginx/conf.d/default.conf &&
-             nginx -g 'daemon off;'"
     healthcheck:
       test: [ "CMD", "curl", "-f", "http://localhost/" ]
       interval: 30s
