--- a/local-compose.yaml.example
+++ b/local-compose.yaml.example
@@ -44,6 +44,7 @@ services:
     volumes:
       - wiki-webroot:/var/www/atlwiki:ro
       - ./mediawiki.conf:/etc/nginx/templates/mediawiki.conf.template:ro
+      - ./default.conf:/etc/nginx/conf.d/default.conf:ro
     ports:
       - '3000:80'
     networks:
