fix(env): update comments

--- a/.env.local.example
+++ b/.env.local.example
@@ -25,11 +25,11 @@ SECRET_KEY=""
 # The IP address or hostname of your database server
 DB_SERVER="mariadb"
 # The name of the table in the database used by MediaWiki
-DB_NAME="local-maria-db"
+DB_NAME="local-maria-db" # This needs to match MARIADB_NAME
 # The username used by MediaWiki to connect to the database
-DB_USER="local-maria-user"
+DB_USER="local-maria-user" # This needs to match MARIADB_USER
 # The password used by MediaWiki to connect to the database
-DB_PASSWORD="local-maria-password"
+DB_PASSWORD="local-maria-password" # This needs to match MARIADB_PASSWORD
 
 
 # SMTP Configurations and Secrets
@@ -56,12 +56,12 @@ TURNSTILE_SITE_KEY=""
 TURNSTILE_SECRET_KEY=""
 
 
-# OpenID Okta Secrets
+# OpenID Okta Secrets - DISABLED LOCALLY
 
 # The client ID for OpenID authentication from Okta
-# OPENID_CLIENT_ID="" DISABLED FOR LOCAL
+# OPENID_CLIENT_ID=""
 # The client secret for OpenID authentication from Okta
-# OPENID_CLIENT_SECRET="" DISABLED FOR LOCAL
+# OPENID_CLIENT_SECRET=""
 
 
 # S3 Configurations and Secrets
@@ -80,9 +80,9 @@ S3_BUCKET_DOMAIN="minio:9000"
 
 # Miscellaneous Configurations
 
-# The domain the wiki will be accessible from, without the protocol (e.g. example.com)
+# The domain the wiki will be accessible from, without the protocol (e.g. localhost:3000)
 SITENAME="localhost:3000"
-# The full URL the wiki will be accessible from, including the protocol (e.g. https://example.com)
+# The full URL the wiki will be accessible from, including the protocol (e.g. https://localhost:3000)
 WG_SERVER="http://localhost:3000"
 # Discord Webhook URL
 DISCORD_WEBHOOK_URL=""
