--- a/local-compose.yaml.example
+++ b/local-compose.yaml.example
@@ -43,8 +43,8 @@ services:
       NGINX_ENVSUBST_OUTPUT_DIR: /etc/nginx/conf.d
     volumes:
       - wiki-webroot:/var/www/atlwiki:ro
-      - ./mediawiki.conf:/etc/nginx/templates/mediawiki.conf.template:ro
-      - ./default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./wiki/mediawiki.conf:/etc/nginx/templates/mediawiki.conf.template:ro
+      - ./wiki/default.conf:/etc/nginx/conf.d/default.conf:ro
     ports:
       - '3000:80'
     networks:
