--- a/staging-compose.yaml.example
+++ b/staging-compose.yaml.example
@@ -40,7 +40,8 @@ services:
       NGINX_SERVER_NAME: ${SITENAME}
     volumes:
       - wiki-webroot:/var/www/atlwiki:ro
-      - ./mediawiki.conf:/etc/nginx/templates/mediawiki.conf.template:ro
+      - ./wiki/mediawiki.conf:/etc/nginx/templates/mediawiki.conf.template:ro
+      - ./wiki/default.conf:/etc/nginx/conf.d/default.conf:ro
     ports:
       - '3001:80'
     networks:
