--- a/systemd/wiki-sitemap.service
+++ b/systemd/wiki-sitemap.service
@@ -6,4 +6,4 @@ Requires=docker.service
 [Service]
 Type=oneshot
 User=root
-ExecStart=/usr/bin/docker exec atlwiki-mediawiki php /var/www/atlwiki/mediawiki/maintenance/run.php generateSitemap --memory-limit=50M --fspath=/var/www/atlwiki/sitemap/ --identifier=atl.wiki --urlpath=/sitemap/ --server=https://atl.wiki --compress=yes --skip-redirects
+ExecStart=/usr/bin/docker exec wiki-mediawiki php /var/www/wiki/mediawiki/maintenance/run.php generateSitemap --memory-limit=50M --fspath=/var/www/wiki/sitemap/ --identifier=atl.wiki --urlpath=/sitemap/ --server=https://atl.wiki --compress=yes --skip-redirects
