--- a/wiki/mediawiki.conf
+++ b/wiki/mediawiki.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     server_name ${NGINX_SERVER_NAME};
-    root /var/www/atlwiki;
+    root /var/www/wiki;
     index index.php;
 
     location / {
