--- a/deployment/local-compose.yaml.example
+++ b/deployment/local-compose.yaml.example
@@ -10,15 +10,15 @@ services:
         MEDIAWIKI_VERSION: ${MEDIAWIKI_VERSION}
         MEDIAWIKI_BRANCH: ${MEDIAWIKI_BRANCH}
         CITIZEN_VERSION: ${CITIZEN_VERSION}
-    container_name: local-atlwiki-mediawiki
+    container_name: local-wiki-mediawiki
     depends_on:
       valkey:
         condition: service_started
       mariadb:
         condition: service_healthy
     volumes:
-      - wiki-webroot:/var/www/atlwiki
-      - .env:/var/www/atlwiki/.env:ro
+      - wiki-webroot:/var/www/wiki
+      - .env:/var/www/wiki/.env:ro
     networks:
       - wiki-network
     restart: unless-stopped
@@ -34,7 +34,7 @@ services:
 
   nginx:
     image: nginx:stable-alpine
-    container_name: local-atlwiki-nginx
+    container_name: local-wiki-nginx
     depends_on:
       mediawiki:
         condition: service_healthy
@@ -42,7 +42,7 @@ services:
       NGINX_SERVER_NAME: ${SITENAME}
       NGINX_ENVSUBST_OUTPUT_DIR: /etc/nginx/conf.d
     volumes:
-      - wiki-webroot:/var/www/atlwiki:ro
+      - wiki-webroot:/var/www/wiki:ro
       - ./wiki/mediawiki.conf:/etc/nginx/templates/mediawiki.conf.template:ro
       - ./wiki/default.conf:/etc/nginx/conf.d/default.conf:ro
     ports:
@@ -59,7 +59,7 @@ services:
 
   valkey:
     image: valkey/valkey:alpine
-    container_name: local-atlwiki-valkey
+    container_name: local-wiki-valkey
     volumes:
       - valkey-data:/data
     networks:
@@ -77,7 +77,7 @@ services:
 
   mariadb:
     image: mariadb:latest
-    container_name: local-atlwiki-mariadb
+    container_name: local-wiki-mariadb
     environment:
       MARIADB_ROOT_PASSWORD: ${MARIADB_PASSWORD}
       MARIADB_DATABASE: ${MARIADB_NAME}
@@ -99,7 +99,7 @@ services:
 
   minio:
     image: minio/minio:latest
-    container_name: local-atlwiki-minio
+    container_name: local-wiki-minio
     environment:
       MINIO_ROOT_USER: ${MINIO_USER}
       MINIO_ROOT_PASSWORD: ${MINIO_PASSWORD}
