chore(settings): fix file  associations for Justfiles

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "*compose.yaml*": "yaml",
-        ".env.*": "env"
+        ".env.*": "env",
+        "Justfile*": "just"
     }
 }
