feat(php): implement sentry monitoring

--- a/deployment/.env.local.example
+++ b/deployment/.env.local.example
@@ -86,7 +86,10 @@ SITENAME="localhost:3000"
 WG_SERVER="http://localhost:3000"
 # Discord Webhook URL
 DISCORD_WEBHOOK_URL=""
-
+# Sentry DSN
+SENTRY_DSN=""
+# Environment
+ENVIRONMENT="local"
 
 # Local Configurations
 MARIADB_PASSWORD="local-maria-password" # This needs to match DB_PASSWORD
