--- a/deployment/.env.example
+++ b/deployment/.env.example
@@ -86,3 +86,7 @@ SITENAME=""
 WG_SERVER=""
 # Discord Webhook URL
 DISCORD_WEBHOOK_URL=""
+# Sentry DSN
+SENTRY_DSN=""
+# Environment
+ENVIRONMENT=""
