--- a/wiki/php.ini
+++ b/wiki/php.ini
@@ -1,8 +1,10 @@
 ; General Configurations
-log_errors=On
-error_log=/tmp/php-error.log
-display_errors=Off
-error_reporting=E_ALL
+error_reporting = E_ALL
+log_errors = On
+error_log = /var/log/php/error.log
+display_errors = Off
+display_startup_errors = Off
+zend.exception_ignore_args=Off
 allow_url_fopen = On
 opcache.memory_consumption = 128
 opcache.interned_strings_buffer = 8
