feat(deployment): add Sentry sampling rates and logging configuration to environment files

--- a/deployment/.env.example
+++ b/deployment/.env.example
@@ -87,6 +87,34 @@ WG_SERVER=""
 # Discord Webhook URL
 DISCORD_WEBHOOK_URL=""
 # Sentry DSN
+# Sentry Sampling Rates (0.0 to 1.0)
+SENTRY_TRACES_SAMPLE_RATE=""
+SENTRY_PROFILES_SAMPLE_RATE=""
 SENTRY_DSN=""
 # Environment
 ENVIRONMENT=""
+
+# Logging Configuration
+# Debug features (set to 'true' for debugging, 'false' for production security)
+MW_DEBUG_EXCEPTION_DETAILS=""
+MW_DEBUG_TOOLBAR=""
+MW_DEBUG_SHOW_LOGS=""
+MW_DEBUG_DEVELOPMENT_WARNINGS=""
+MW_DEBUG_DUMP_SQL=""
+MW_DEBUG_RESOURCE_LOADER=""
+
+# Log file paths (customize if needed)
+MW_DEBUG_LOG_FILE=""
+MW_DEBUG_DB_ERROR_LOG_FILE=""
+MW_EXCEPTION_LOG_FILE=""
+MW_DBERROR_LOG_FILE=""
+MW_RESOURCELOADER_LOG_FILE=""
+MW_RATELIMIT_LOG_FILE=""
+
+# Sentry logging integration
+MW_SENTRY_LOGGING_ENABLED=""
+MW_SENTRY_LOGS_LEVEL=""          # Production: WARN, Staging: INFO
+MW_SENTRY_EVENTS_LEVEL=""        # ERROR level for high-priority events
+MW_SENTRY_BREADCRUMBS_LEVEL=""   # INFO for context, WARNING for less noise
+
+
