--- a/deployment/.env.local.example
+++ b/deployment/.env.local.example
@@ -87,6 +87,9 @@ WG_SERVER="http://localhost:3000"
 # Discord Webhook URL
 DISCORD_WEBHOOK_URL=""
 # Sentry DSN
+# Sentry Sampling Rates (0.0 to 1.0)
+SENTRY_TRACES_SAMPLE_RATE="1.0"
+SENTRY_PROFILES_SAMPLE_RATE="1.0"
 SENTRY_DSN=""
 # Environment
 ENVIRONMENT="local"
@@ -97,3 +100,28 @@ MARIADB_NAME="local-maria-db" # This needs to match DB_NAME
 MARIADB_USER="local-maria-user" # This needs to match DB_USER
 MINIO_USER="local-minio-user" # This needs to match S3_ACCESS_KEY_ID
 MINIO_PASSWORD="local-minio-password" # This needs to match S3_SECRET_ACCESS_KEY
+
+# Logging Configuration
+# Debug features (set to 'true' for local development debugging)
+MW_DEBUG_EXCEPTION_DETAILS="true"
+MW_DEBUG_TOOLBAR="true"
+MW_DEBUG_SHOW_LOGS="true"
+MW_DEBUG_DEVELOPMENT_WARNINGS="true"
+MW_DEBUG_DUMP_SQL="true"
+MW_DEBUG_RESOURCE_LOADER="true"
+
+# Log file paths (customize if needed)
+MW_DEBUG_LOG_FILE="/var/log/mediawiki/debug.log"
+MW_DEBUG_DB_ERROR_LOG_FILE="/var/log/mediawiki/dberror.log"
+MW_EXCEPTION_LOG_FILE="/var/log/mediawiki/exception.log"
+MW_DBERROR_LOG_FILE="/var/log/mediawiki/dberror.log"
+MW_RESOURCELOADER_LOG_FILE="/var/log/mediawiki/resourceloader.log"
+MW_RATELIMIT_LOG_FILE="/var/log/mediawiki/ratelimit.log"
+
+# Sentry logging integration
+MW_SENTRY_LOGGING_ENABLED="true"
+MW_SENTRY_LOGS_LEVEL="INFO"          # Development: full logging
+MW_SENTRY_EVENTS_LEVEL="ERROR"       # High-priority errors only
+MW_SENTRY_BREADCRUMBS_LEVEL="INFO"   # Context for debugging
+
+
