feat(vscode): enhance PHP development environment with formatting on save, PHP version specification, and improved include paths

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,14 @@
         "*compose.yaml*": "yaml",
         ".env.*": "env",
         "Justfile*": "just"
-    }
+    },
+    "[php]": {
+        "editor.formatOnSave": true
+    },
+    "php.version": "8.3",
+    "intelephense.environment.includePaths": [
+        "wiki/*",
+        "wiki/**/*"
+    ],
+    "editor.wordWrap": "on"
 }
