--- a/wiki/composer.json
+++ b/wiki/composer.json
@@ -3,8 +3,9 @@
     "description": "Configuration files for atl.wiki MediaWiki instance",
     "type": "project",
     "require": {
-        "sentry/sentry": "^4.10",
+        "sentry/sentry": "^4.12",
         "vlucas/phpdotenv": "^5.6.2",
-        "psr/log": "1.1.4"
+        "psr/log": "^1.1",
+        "monolog/monolog": "^2.9"
     }
 }
