feat(extensions): add Buggy extension to the extensions list for MediaWiki

--- a/wiki/extensions.json
+++ b/wiki/extensions.json
@@ -116,6 +116,12 @@
     "extension_url": "https://gerrit.wikimedia.org/r/mediawiki/extensions/FilterSpecialPages",
     "install_type": "git",
     "git_branch": "REL1_43"
+  },
+  {
+    "extension_name": "Buggy",
+    "extension_url": "https://gerrit.wikimedia.org/r/mediawiki/extensions/Buggy",
+    "install_type": "git",
+    "git_branch": "REL1_43"
   }
 ]
 
